[gd_scene load_steps=3 format=3 uid="uid://cp1b42imh3k10"]

[ext_resource type="Script" uid="uid://hd84si04n2xw" path="res://scene/UI/statistics/statistics.gd" id="1_dd4i1"]
[ext_resource type="Texture2D" uid="uid://dwl5hmbdn5dct" path="res://scene/UI/statistics/Background.png" id="1_qp3h3"]

[node name="Statistics" type="CanvasLayer"]
script = ExtResource("1_dd4i1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_qp3h3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.85
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToolbarContainer" type="PanelContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/ToolbarContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ToolbarContainer/MarginContainer"]
layout_mode = 2

[node name="MenuName" type="Label" parent="Control/VBoxContainer/ToolbarContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Statistics"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer/ToolbarContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="GridContainer" type="GridContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 24
columns = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(360, 140)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Runs"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(360, 140)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Kills"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(360, 140)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer3/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Best score"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer4" type="PanelContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(360, 140)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer4/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer4/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time played"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer/VBoxContainer/MarginContainer/GridContainer/PanelContainer4/MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="Control/VBoxContainer/ToolbarContainer/MarginContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
